[gd_scene load_steps=3 format=3 uid="uid://b8olwx5hdnym4"]

[ext_resource type="Script" path="res://scripts/panels/size_menu.gd" id="1_b6vy5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vbmh6"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.164706, 0.164706, 0.164706, 1)

[node name="SizeMenu" type="PopupPanel"]
initial_position = 1
size = Vector2i(600, 120)
visible = true
theme_override_styles/panel = SubResource("StyleBoxFlat_vbmh6")
script = ExtResource("1_b6vy5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 590.0
offset_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
focus_next = NodePath("Input/WidthInput")
focus_previous = NodePath("Buttons/Cancel")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Size of level in tiles:"

[node name="Input" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LabelWidth" type="Label" parent="VBoxContainer/Input"]
layout_mode = 2
size_flags_horizontal = 0
text = "Width"

[node name="WidthInput" type="SpinBox" parent="VBoxContainer/Input"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../../Buttons/Cancel")
focus_neighbor_top = NodePath("../../Buttons/Ok")
focus_neighbor_right = NodePath("../HeightInput")
focus_neighbor_bottom = NodePath("../../Buttons/Ok")
focus_next = NodePath("../HeightInput")
focus_previous = NodePath("../../Buttons/Cancel")
min_value = 1.0
max_value = 9999.0
value = 27.0
rounded = true
allow_greater = true
suffix = "tiles"

[node name="LabelHeight" type="Label" parent="VBoxContainer/Input"]
layout_mode = 2
size_flags_horizontal = 0
text = "Height"

[node name="HeightInput" type="SpinBox" parent="VBoxContainer/Input"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../WidthInput")
focus_neighbor_top = NodePath("../../Buttons/Ok")
focus_neighbor_right = NodePath("../../Buttons/Ok")
focus_neighbor_bottom = NodePath("../../Buttons/Ok")
focus_next = NodePath("../../Buttons/Ok")
focus_previous = NodePath("../WidthInput")
min_value = 1.0
max_value = 9999.0
value = 27.0
rounded = true
allow_greater = true
suffix = "tiles"

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Ok" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../../Input/HeightInput")
focus_neighbor_top = NodePath("../../Input/WidthInput")
focus_neighbor_right = NodePath("../Cancel")
focus_neighbor_bottom = NodePath("../../Input/WidthInput")
focus_next = NodePath("../Cancel")
focus_previous = NodePath("../../Input/HeightInput")
text = "Ok"

[node name="Cancel" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_neighbor_left = NodePath("../Ok")
focus_neighbor_top = NodePath("../../Input/HeightInput")
focus_neighbor_right = NodePath("../../Input/WidthInput")
focus_neighbor_bottom = NodePath("../../Input/HeightInput")
focus_next = NodePath("../../Input/WidthInput")
focus_previous = NodePath("../Ok")
text = "Cancel"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="pressed" from="VBoxContainer/Buttons/Ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Cancel" to="." method="_on_cancel_pressed"]
